<resources>
    <string name="app_name">tydinz</string>
    <string name="enter_pin">Enter a 4-digits pin</string>
    <string name="account_will_create">A new account will be created,</string>
    <string name="already_have">you already have an old account:</string>
    <string name="select_ping">Select Pin</string>
    <string name="choose_pin">Choose a pin</string>
    <string name="retrieve_account">Retrieve Account</string>
    <string name="having_trouble">Having Trouble? Contact Us</string>
    <string name="get_in">Get In</string>
    <string name="box_head">©  2021 BoxHead Technology Ltd</string>
    <string name="signed_in_as">You will be signed in as %1$d . Not\n your account?</string>
    <string name="not_your_account">Not your account?</string>
    <string name="secret_pin">Enter your secret pin</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="pick_letter_word">Pick at least one letter and enter your\n favorite word starting with each letter</string>
    <string name="enter_pin_below">Enter your account pin below</string>
    <string name="aword">Enter your favorite A word</string>
    <string name="bword">Enter your favorite B word</string>
    <string name="cword">Enter your favorite C word</string>
    <string name="dword">Enter your favorite D word</string>
    <string name="eword">Enter your favorite E word</string>
    <string name="fword">Enter your favorite F word</string>
</resources>