<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".RetrieveAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_white_24"
                android:outlineAmbientShadowColor="@color/whiteAccent"
                >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve_account"
                android:layout_marginLeft="80dp"
                android:textColor="@color/whiteAccent"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pin_below"
            android:textColor="@color/whiteAccent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:layout_width="160dp"
            android:background="@color/button_color"
            android:layout_height="50dp"
            android:focusable="true"
            android:inputType="text"
            android:maxLength="8"
            android:textSize="30dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/whiteAccent"
            />

        <Button
            android:id="@+id/retrvBtn"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_radius"
            android:textColor="#ffffff"
            android:foreground="@drawable/ic_baseline_arrow_forward_ios_24"
            android:textSize="15sp" />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/eword"
                android:ems="10"
                android:inputType="text"
                android:textSize="15sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@color/whiteAccent"
                android:drawableStart="@drawable/letterword"
                android:drawableEnd="@drawable/ic_baseline_close_24"
                />
        </LinearLayout>





    </LinearLayout>

</RelativeLayout>