<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".VerificationScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:src="@drawable/ic_baseline_arrow_back_ios_white_24"
                android:outlineAmbientShadowColor="@color/whiteAccent"
                >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginLeft="140dp"
                android:textColor="@color/whiteAccent"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_pin"
            android:textColor="@color/whiteAccent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/transparent_white_clr"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:maxLines="1"
                android:textSize="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/whiteAccent"
                />

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/transparent_white_clr"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:maxLines="1"
                android:textSize="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:textColor="@color/whiteAccent"
                />

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/transparent_white_clr"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:maxLines="1"
                android:textSize="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:textColor="@color/whiteAccent"
                />

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/transparent_white_clr"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:maxLines="1"
                android:textSize="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:textColor="@color/whiteAccent"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@color/dark_blue"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="150dp">

            <TextView
                android:id="@+id/inAs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signed_in_as"
                android:textColor="@color/whiteAccent"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/retrvBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:onClick="goCreateWord"
                android:background="@drawable/button_radius"
                android:text="@string/retrieve_account"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>